--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE>
-I'm Sam and the Seal rules
+<html>
+  <head>
+    <title>Otto</title>
+  </head>
+  <body>
+    <h1>Sushi</h1>
+    <h2>Sam Cowan</h2>
+    <p>Sam Cowan <br> Anjini Katari <br> Ethan Lin <br> Jason Lin</p>
+  </body>
+</html>
