--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ HW03 -- Thank you for coming to my TED talk (Making a webpage about a passion)
       <p>
       <a href="https://anjini-katari.github.io/web/">Anjini Katari</a><br>
           <a href="https://Jason1165.github.io/web/">Jason Lin</a><br>
-          <a href="https://Ethan-Lin1.github.io/web/">Ethan Lin</a>
+          <a href="https://Ethan-Lin1.github.io/Web/">Ethan Lin</a>
       </p>
       
       
