--- a/talk.html
+++ b/talk.html
@@ -50,7 +50,7 @@ HW05 -- Stuylin (First experience with CSS)
       </ul>
       
       <h2>Teammate Showcase!</h2>
-      <h3>Showcasing Team Sushi!</h3>
+      <h3>Showcasing Team Grape!</h3>
       <p>
       <a href="https://samglusker.github.io/web/talk.html">Sam Glusker</a><br>
           <a href="https://gsgsxebstuy.github.io/web/talk.html">Edward Bulic</a>
